--- a/index.html
+++ b/index.html
@@ -56,6 +56,196 @@
       </div>
     </div>
   </div>
+
+  <div class="reason">
+    <div class="reason_wrapper">
+      <div class="reason_left">
+        <div class="reason_left_wrapper">
+          <div class="greenbox">
+            <div class="greenbox"></div>
+          </div>
+          <div class="image_left">
+            <img src="./images/Rectangle 2.png" alt="image" class="image_left">
+          </div>
+          <div class="play_button">
+            <img src="./images/play.png" alt="play-button" class="play_button">
+          </div>
+        </div>
+      </div>
+      <div class="reason_right">
+        <div class="reason_right_wrapper">
+          <div class="h1">
+            <div class="h1">
+              <p>Why you should report any environment crisis?</p>
+            </div>
+          </div>
+          <div class="right_content">
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Ut enim ad
+              minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              <br><br>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Ut enim ad
+              minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+          <button class="btn primary">Report a case </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <section>
+    <div class="report">
+      <div class="report_inner">
+        <div class="report_inner_wrapper">
+          <div class="box">
+            <p>Recent reports</p>
+          </div>
+          <div class="line">
+            <div class="line"></div>
+          </div>
+          <div class="image_box">
+            <div class="image_box_wrapper">
+              <div class="white_box">
+                <div class="image">
+                  <img src="./images/Rectangle 6.png" alt="image" class="image">
+                </div>
+                <div class="text_content">
+                  <div class="green_text">
+                    <p>Ogoni river pollution</p>
+                  </div>
+                  <div class="date">
+                    <p>11/10/2020</p>
+                  </div>
+                  <div class="black_text">
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur. Excepteur sint
+                      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                  </div>
+                  <div class="ogun_text">
+                    <p>Ogoni LGA</p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="white_box">
+                <div class="image">
+                  <img src="./images/Rectangle 6.png" alt="image" class="image">
+                </div>
+                <div class="text_content">
+                  <div class="green_text">
+                    <p>Ogoni river pollution</p>
+                  </div>
+                  <div class="date">
+                    <p>11/10/2020</p>
+                  </div>
+                  <div class="black_text">
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur.
+                      Excepteur sint
+                      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                  </div>
+                  <div class="ogun_text">
+                    <p>Ogoni LGA</p>
+                  </div>
+                </div>
+              </div>
+              <div class="white_box">
+                <div class="image">
+                  <img src="./images/Rectangle 6.png" alt="image" class="image">
+                </div>
+                <div class="text_content">
+                  <div class="green_text">
+                    <p>Ogoni river pollution</p>
+                  </div>
+                  <div class="date">
+                    <p>11/10/2020</p>
+                  </div>
+                  <div class="black_text">
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur.
+                      Excepteur sint
+                      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                  </div>
+                  <div class="ogun_text">
+                    <p>Ogoni LGA</p>
+                  </div>
+                </div>
+              </div>
+              <div class="white_box">
+                <div class="image">
+                  <img src="./images/Rectangle 6.png" alt="image" class="image">
+                </div>
+                <div class="text_content">
+                  <div class="green_text">
+                    <p>Ogoni river pollution</p>
+                  </div>
+                  <div class="date">
+                    <p>11/10/2020</p>
+                  </div>
+                  <div class="black_text">
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                      pariatur.
+                      Excepteur sint
+                      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                  </div>
+                  <div class="ogun_text">
+                    <p>Ogoni LGA</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+        </div>
+        <button class="white">
+          <p>see more</p>
+        </button>
+  
+      </div>
+    </div>
+  </section>
+  
+  
+  
+  <section>
+    <div class="activities">
+      <div class="wrapper">
+        <div class="header_text">
+          <p>See what is going on in the Niger Delta</p>
+        </div>
+        <div class="img_section">
+          <div class="img_top">
+            <img src="./images/Rectangle 9.png" alt="image" class="imgs">
+            <img src="./images/Rectangle 10.jpg" alt="image" class="imgs">
+            <img src="./images/Rectangle 11.jpg" alt="image" class="imgs">
+            <img src="./images/Rectangle 12.jpg" alt="image" class="imgs">
+          </div>
+          <div class="img_bottom">
+            <img src="./images/Rectangle 9.png" alt="image" class="imgs">
+            <img src="./images/Rectangle 10.jpg" alt="image" class="imgs">
+            <img src="./images/Rectangle 11.jpg" alt="image" class="imgs">
+            <img src="./images/Rectangle 12.jpg" alt="image" class="imgs">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="designer_name">
+      <div class="name_wrapper">
+        <div class="name_text">
+          <p>Designed and built by <span>MATT3X</span> </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
